@@ -1,86 +1,68 @@
 package de.teamlapen.vampirism.entity.player.skills;
 
-import de.teamlapen.vampirism.VampirismMod;
-import de.teamlapen.vampirism.api.VampirismAPI;
 import de.teamlapen.vampirism.api.entity.factions.IFaction;
 import de.teamlapen.vampirism.api.entity.factions.IPlayableFaction;
+import de.teamlapen.vampirism.api.entity.factions.ISkillNode;
+import de.teamlapen.vampirism.api.entity.factions.ISkillTree;
 import de.teamlapen.vampirism.api.entity.player.IFactionPlayer;
 import de.teamlapen.vampirism.api.entity.player.refinement.IRefinement;
 import de.teamlapen.vampirism.api.entity.player.refinement.IRefinementSet;
 import de.teamlapen.vampirism.api.entity.player.skills.ISkill;
 import de.teamlapen.vampirism.api.entity.player.skills.ISkillHandler;
-import de.teamlapen.vampirism.api.entity.player.skills.ISkillType;
 import de.teamlapen.vampirism.api.items.IRefinementItem;
 import de.teamlapen.vampirism.config.VampirismConfig;
 import de.teamlapen.vampirism.core.ModAdvancements;
 import de.teamlapen.vampirism.core.ModEffects;
 import de.teamlapen.vampirism.core.ModStats;
-import de.teamlapen.vampirism.entity.factions.FactionPlayerHandler;
-import de.teamlapen.vampirism.entity.player.refinements.Refinement;
-import de.teamlapen.vampirism.entity.player.refinements.RefinementSet;
-import de.teamlapen.vampirism.items.RefinementItem;
+import de.teamlapen.vampirism.data.ISkillTreeData;
 import de.teamlapen.vampirism.util.RegUtil;
+import net.minecraft.core.Holder;
 import net.minecraft.core.NonNullList;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.StringTag;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.entity.ai.attributes.Attribute;
 import net.minecraft.world.entity.ai.attributes.AttributeInstance;
 import net.minecraft.world.entity.ai.attributes.AttributeModifier;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.item.enchantment.Enchantments;
-import net.minecraft.world.level.ItemLike;
-import net.minecraftforge.registries.RegistryObject;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
-/**
- * Handles skills for Vampirism's IFactionPlayers
- */
 public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<T> {
     private final static Logger LOGGER = LogManager.getLogger(SkillHandler.class);
-    /**
-     * All currently activated skills
-     */
     private final ArrayList<ISkill<T>> enabledSkills = new ArrayList<>();
     private final T player;
     private final IPlayableFaction<T> faction;
     private final NonNullList<ItemStack> refinementItems = NonNullList.withSize(3, ItemStack.EMPTY);
     private final Set<IRefinement> activeRefinements = new HashSet<>();
     private final Map<IRefinement, AttributeModifier> refinementModifier = new HashMap<>();
+    public LinkedHashSet<Holder<ISkillTree>> unlockedTrees = new LinkedHashSet<>();
     private int maxSkillpoints;
     private boolean dirty = false;
+    private final ISkillTreeData treeData;
 
     public SkillHandler(T player, IPlayableFaction<T> faction) {
         this.player = player;
         this.faction = faction;
+        this.treeData = ISkillTreeData.getData(player.getRepresentingPlayer().level());
     }
 
-    public @NotNull Optional<SkillNode> anyLastNode() {
-        Queue<SkillNode> queue = new ArrayDeque<>();
-        for (ISkillType skillType : VampirismAPI.skillManager().getSkillTypes()) {
-            if (skillType.isForFaction(faction)) {
-                queue.add(getRootNode(skillType));
-            }
-        }
+    public @NotNull Optional<ISkillNode> anyLastNode() {
+        return unlockedTrees.stream().flatMap(s -> this.treeData.getAnyLastNode(s, this::isNodeEnabled).stream()).findAny();
+    }
 
-        for (SkillNode skillNode = queue.poll(); skillNode != null; skillNode = queue.poll()) {
-            List<SkillNode> child = skillNode.getChildren().stream().filter(this::isNodeEnabled).toList();
-            if (!child.isEmpty()) {
-                queue.addAll(child);
-            } else if (skillNode.getParent() != null) {
-                return Optional.of(skillNode);
-            }
-        }
-        return Optional.empty();
+    public ISkillTreeData getTreeData() {
+        return this.treeData;
     }
 
     @Override
@@ -91,14 +73,14 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
         if (isSkillEnabled(skill)) {
             return Result.ALREADY_ENABLED;
         }
-        SkillNode node = findSkillNode(getRootNode(skill.getType()), skill);
-        if (node != null) {
-            if (isSkillNodeLocked(node)) {
+        Optional<SkillTreeConfiguration.SkillTreeNodeConfiguration> node = unlockedTrees.stream().flatMap(x -> Optional.ofNullable(treeData.getNodeForSkill(unlockedTrees, skill)).stream()).findFirst().orElse(null);
+        if (node.isPresent()) {
+            if (isSkillNodeLocked(node.get().node().value())) {
                 return Result.LOCKED_BY_OTHER_NODE;
             }
-            if (node.isRoot() || isNodeEnabled(node.getParent())) {
+            if (this.treeData.isRoot(this.unlockedTrees, node.get()) || this.treeData.getParent(node.get()).stream().anyMatch(x -> isNodeEnabled(x.value()))) {
                 if (getLeftSkillPoints() >= skill.getSkillPointCost()) {
-                    return isNodeEnabled(node) ? Result.OTHER_NODE_SKILL : Result.OK;//If another skill in that node is already enabled this one cannot be enabled
+                    return isNodeEnabled(node.get().node().value()) ? Result.OTHER_NODE_SKILL : Result.OK;//If another skill in that node is already enabled this one cannot be enabled
                 } else {
                     return Result.NO_POINTS;
                 }
@@ -157,23 +139,6 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
     }
 
     @Override
-    public void enableRootSkills() {
-        FactionPlayerHandler.getOpt(this.player.getRepresentingPlayer()).ifPresent(handler -> {
-            for (ISkillType skillType : VampirismAPI.skillManager().getSkillTypes()) {
-                if (!skillType.isForFaction(this.faction)) continue;
-                if (skillType.isUnlocked(handler)) {
-                    enableRootSkill(skillType);
-                }
-            }
-        });
-    }
-
-    @Override
-    public void enableRootSkill(@NotNull ISkillType type) {
-        enableSkill((ISkill<T>) getRootNode(type).getElements()[0]);
-    }
-
-    @Override
     public void enableSkill(@NotNull ISkill<T> skill) {
         if (!enabledSkills.contains(skill)) {
             skill.onEnable(player);
@@ -182,7 +147,7 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
             //noinspection ConstantValue
             if (this.player.getRepresentingPlayer() instanceof ServerPlayer serverPlayer && serverPlayer.connection != null) {
                 serverPlayer.awardStat(ModStats.skills_unlocked);
-                ModAdvancements.TRIGGER_SKILL_UNLOCKED.trigger(serverPlayer, skill);
+                ModAdvancements.TRIGGER_SKILL_UNLOCKED.get().trigger(serverPlayer, skill);
             }
         }
 
@@ -212,19 +177,29 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
         this.dirty = true;
     }
 
-    public @Nullable SkillNode findSkillNode(@NotNull SkillNode base, ISkill<T> skill) {
-        for (ISkill<?> s : base.getElements()) {
-            if (s.equals(skill)) {
-                return base;
-            }
-        }
-        SkillNode node;
-        for (SkillNode child : base.getChildren()) {
-            if ((node = findSkillNode(child, skill)) != null) {
-                return node;
-            }
-        }
-        return null;
+    @Override
+    public void updateUnlockedSkillTrees(Collection<Holder<ISkillTree>> skillTrees) {
+        List<Holder<ISkillTree>> removedTrees = this.unlockedTrees.stream().filter(x -> !skillTrees.contains(x)).collect(Collectors.toList());
+        removedTrees.forEach(this::lockSkillTree);
+        skillTrees.stream().filter(x -> !this.unlockedTrees.contains(x)).forEach(this::unlockSkillTree);
+        this.dirty = true;
+    }
+
+    private void unlockSkillTree(Holder<ISkillTree> tree) {
+        this.unlockedTrees.add(tree);
+        SkillTreeConfiguration.SkillTreeNodeConfiguration root = this.treeData.root(tree);
+        root.elements().forEach(x -> enableSkill((ISkill<T>) x.value()));
+        this.dirty = true;
+    }
+
+    private void lockSkillTree(Holder<ISkillTree> tree) {
+        this.enabledSkills.stream().filter(x -> x.allowedSkillTrees().map(l -> tree.is(l), l -> tree.is(l))).forEach(this::disableSkill);
+        this.unlockedTrees.remove(tree);
+        this.dirty = true;
+    }
+
+    public @NotNull Collection<Holder<ISkillTree>> unlockedSkillTrees() {
+        return Collections.unmodifiableCollection(this.unlockedTrees);
     }
 
     @Override
@@ -254,34 +229,25 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
         this.dirty = true;
     }
 
-    public @NotNull List<ISkill<T>> getLockingSkills(@NotNull SkillNode nodeIn) {
+    public @NotNull List<ISkill<T>> getLockingSkills(@NotNull ISkillTree.INodeHolder nodeIn) {
         //noinspection unchecked
-        return (List<ISkill<T>>) (Object) Arrays.stream(nodeIn.getLockingNodes()).map(id -> SkillTreeManager.getInstance().getSkillTree().getNodeFromId(id)).filter(Objects::nonNull).flatMap(node -> Arrays.stream(node.getElements())).collect(Collectors.toList());
+        return (List<ISkill<T>>) (Object) nodeIn.value().lockingNodes().stream().flatMap(s -> s.value().elements().stream().map(Holder::value)).toList();
     }
 
     @Override
     public ISkill<T> @Nullable [] getParentSkills(@NotNull ISkill<T> skill) {
-        SkillNode node = findSkillNode(getRootNode(skill.getType()), skill);
-        if (node == null) {
-            return null;
-        } else {
-            //noinspection unchecked
-            return (ISkill<T>[]) node.getParent().getElements();
-        }
+        Optional<SkillTreeConfiguration.SkillTreeNodeConfiguration> nodeForSkill = this.treeData.getNodeForSkill(this.unlockedTrees, skill);
+        return nodeForSkill.flatMap(x -> this.treeData.getParent(x)).stream().flatMap(x -> x.value().elements().stream()).map(x -> x.value()).toArray(ISkill[]::new);
     }
 
     public T getPlayer() {
         return player;
     }
 
-    public @NotNull Collection<SkillNode> getRootNodes() {
-        return VampirismAPI.skillManager().getSkillTypes().stream().map(this::getRootNode).collect(Collectors.toList());
+    public boolean noSkillEnabled() {
+        List<ISkill<?>> list = this.unlockedTrees.stream().map(x -> this.treeData.root(x)).flatMap(x -> x.elements().stream()).map(Holder::value).collect(Collectors.toList());
+        return this.enabledSkills.isEmpty() || new HashSet<>(list).containsAll(this.enabledSkills);
     }
-
-    public @NotNull SkillNode getRootNode(@NotNull ISkillType type) {
-        return VampirismMod.proxy.getSkillTree(player.isRemote()).getRootNodeForFaction(type.createIdForFaction(faction.getID()));
-    }
-
 
     /**
      * @return If an update should be sent to the client
@@ -290,7 +256,7 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
         return dirty;
     }
 
-    public boolean isNodeEnabled(@NotNull SkillNode node) {
+    public boolean isNodeEnabled(@NotNull ISkillNode node) {
         for (ISkill<T> s : enabledSkills) {
             if (node.containsSkill(s)) return true;
         }
@@ -307,8 +273,13 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
         return enabledSkills.contains(skill);
     }
 
-    public boolean isSkillNodeLocked(@NotNull SkillNode nodeIn) {
-        return Arrays.stream(nodeIn.getLockingNodes()).map(id -> SkillTreeManager.getInstance().getSkillTree().getNodeFromId(id)).filter(Objects::nonNull).flatMap(node -> Arrays.stream(node.getElements())).anyMatch(this::isSkillEnabled);
+    @Override
+    public boolean isSkillEnabled(Holder<ISkill<?>> skill) {
+        return enabledSkills.contains(skill.value());
+    }
+
+    public boolean isSkillNodeLocked(@NotNull ISkillNode nodeIn) {
+        return nodeIn.lockingNodes().stream().flatMap(s -> s.value().elements().stream()).map(Holder::value).anyMatch(this::isSkillEnabled);
     }
 
     public void loadFromNbt(@NotNull CompoundTag nbt) {
@@ -359,6 +330,13 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
         if (nbt.contains("skill_points")) {
             this.maxSkillpoints = nbt.getInt("skill_points");
         }
+        if (nbt.contains("unlocked_trees")) {
+            ListTag unlockedTrees = nbt.getList("unlocked_trees", StringTag.TAG_STRING);
+            this.unlockedTrees.clear();
+            unlockedTrees.stream().map(s -> (StringTag)s).forEach(tag -> {
+                this.unlockedTrees.add(RegUtil.getSkillTree(getPlayer().getRepresentingPlayer().level(), tag.getAsString()));
+            });
+        }
     }
 
     public void readUpdateFromServer(@NotNull CompoundTag nbt) {
@@ -403,6 +381,13 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
         if (nbt.contains("skill_points")) {
             this.maxSkillpoints = nbt.getInt("skill_points");
         }
+        if (nbt.contains("unlocked_trees")) {
+            ListTag unlockedTrees = nbt.getList("unlocked_trees", StringTag.TAG_STRING);
+            this.unlockedTrees.clear();
+            unlockedTrees.stream().map(s -> (StringTag)s).forEach(tag -> {
+                this.unlockedTrees.add(RegUtil.getSkillTree(getPlayer().getRepresentingPlayer().level(), tag.getAsString()));
+            });
+        }
     }
 
     @Override
@@ -412,7 +397,6 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
 
     public void resetSkills() {
         disableAllSkills();
-        enableRootSkills();
     }
 
     public void saveToNbt(@NotNull CompoundTag nbt) {
@@ -433,6 +417,11 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
         }
         nbt.put("refinement_items", refinements);
         nbt.putInt("skill_points", this.maxSkillpoints);
+        ListTag unlockedTrees = new ListTag();
+        for (Holder<ISkillTree> tree : this.unlockedTrees) {
+            unlockedTrees.add(StringTag.valueOf(RegUtil.id(getPlayer().getRepresentingPlayer().level(), tree.value()).toString()));
+        }
+        nbt.put("unlocked_trees", unlockedTrees);
     }
 
     public void writeUpdateForClient(@NotNull CompoundTag nbt) {
@@ -453,6 +442,11 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
         }
         nbt.put("refinement_items", refinementItems);
         nbt.putInt("skill_points", this.maxSkillpoints);
+        ListTag unlockedTrees = new ListTag();
+        for (Holder<ISkillTree> tree : this.unlockedTrees) {
+            unlockedTrees.add(StringTag.valueOf(RegUtil.id(getPlayer().getRepresentingPlayer().level(), tree.value()).toString()));
+        }
+        nbt.put("unlocked_trees", unlockedTrees);
         dirty = false;
     }
 
@@ -461,14 +455,14 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
         if (stack.getItem() instanceof IRefinementItem refinementItem) {
             IRefinementSet set = refinementItem.getRefinementSet(stack);
             if (set != null) {
-                set.getRefinements().stream().map(RegistryObject::get).forEach(x -> {
+                set.getRefinements().stream().map(Supplier::get).forEach(x -> {
                     this.activeRefinements.add(x);
                     if (!this.player.isRemote() && x.getAttribute() != null) {
                         AttributeInstance attributeInstance = this.player.getRepresentingPlayer().getAttribute(x.getAttribute());
                         double value = x.getModifierValue();
                         AttributeModifier t = attributeInstance.getModifier(x.getUUID());
                         if (t != null) {
-                            attributeInstance.removeModifier(t);
+                            attributeInstance.removeModifier(x.getUUID());
                             value += t.getAmount();
                         }
                         t = x.createAttributeModifier(x.getUUID(), value);
@@ -487,7 +481,7 @@ public class SkillHandler<T extends IFactionPlayer<T>> implements ISkillHandler<
             if (stack.getItem() instanceof IRefinementItem refinementItem) {
                 IRefinementSet set = refinementItem.getRefinementSet(stack);
                 if (set != null) {
-                    set.getRefinements().stream().map(RegistryObject::get).forEach(x -> {
+                    set.getRefinements().stream().map(Supplier::get).forEach(x -> {
                         this.activeRefinements.remove(x);
                         if (!this.player.isRemote() && x.getAttribute() != null) {
                             AttributeInstance attributeInstance = this.player.getRepresentingPlayer().getAttribute(x.getAttribute());
